2006-09-24  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* pcmanx-gtk2.spec.in: Polish the spec for redhat/fedora.
	* pcmanx.desktop.in: Remove the duplicated item.

2006-09-12  Jim Huang  <jserv.tw@gmail.com>

	* src/appconfig.cpp (CAppConfig::LoadFavorites): Fixlet to AntiIdleStr
	typo. Anti idle string should be working now.

2006-09-08  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* pcmanx-gtk2.spec.in: remove tag for Fedora Core 5, add dependency term.

2006-08-29  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* pcmanx-gtk2.spec.in: add tag for Fedora Core 5

	* TODO: task add

2006-08-20  Kanru Chen  <koster@debian.org.tw>

	* configure.ac: Bump version number to 0.3.5, let's make a good release.

2006-08-20  Kanru Chen  <koster@debian.org.tw>

	* plugin/src/Makefile.am: Remove $(MOZILLA_LIBS) to avoid unnecessary
	dependency.
	* NEWS: Prepare 0.3.5 release.

2006-08-01  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/mainframe.cpp: Always hide the text on toolbar buttons.
	
	* src/dialog.cpp: Swap OK and Cancel button to be compatible with GNOME.
	
	* src/view/telnetview.cpp: Display hand cursor on hyperlinks when no mouse support.

2006-08-01  Kanru Chen  <koster@debian.org.tw>

	* ChangeLog: Correct timestamps.

2006-07-28  Kanru Chen  <koster@debian.org.tw>

	* src/appconfig.cpp,
	src/appconfig.h,
	src/core/termview.cpp,
	src/core/termview.h,
	src/mainframe.cpp,
	src/mainframe.h: Support setting separated English/ASCII font.

2006-07-26  Jim Huang  <jserv.tw@gmail.com>

	* src/pcmanx_gtk2.cpp 
	(GOptionEntry entries): New structure for runtime options.
	(main): Initialize Runtime options and check if multiple-instance is
	allowed. This enables "pcmanx --help" to dump options.

2006-07-16  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* pcmanx-gtk2.spec.in: Modify the spec for fedora rpm package build.

2006-07-16  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Change bug-reporting address to PCManX in Google